syntax = "proto2";

package tflite.task.vision;

import "tensorflow_lite_support/cc/task/vision/proto/class.proto";


message Landmark {
  optional float key_y = 1;
  optional float key_x = 2;
  optional float score = 3;
  
}

message LandmarkResult {
  repeated Landmark landmarks = 1;
}
